src/objects/ADvendio__ContentAdPriceAssignment__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__AdPrice__c</fullName>
        <label>Ad Price</label>
        <referenceTo>ADvendio__Ad_price__c</referenceTo>
        <relationshipLabel>Content Ad Price Assignments</relationshipLabel>
        <relationshipName>ContentAdPriceAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__Content__c</fullName>
        <label>Content</label>
        <referenceTo>ADvendio__Content__c</referenceTo>
        <relationshipLabel>Content Ad Price Assignments</relationshipLabel>
        <relationshipName>ContentAdPriceAssignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ADvendio__PlacementContentAssignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Placement Content Assignment</label>
        <referenceTo>ADvendio__PlacementContentAssignment__c</referenceTo>
        <relationshipLabel>Content Ad Price Assignments</relationshipLabel>
        <relationshipName>ContentAdPriceAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Content Ad Price Assignment</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CAA-{00000}</displayFormat>
        <label>Content Ad Price Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Content Ad Price Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>